# hoard

./: .gitignore  Cargo.toml  README.md
src/: broker.rs  co_located_distributed_fifo_cache.rs  co_located_fifo_cache.rs  hoard.rs  lib.rs  max_size_hash_map_cache.rs  remote_fifo_cache.rs  types.rs
src/common/: cache.rs  evicition_policy.rs  eviction_policy.rs  key.rs  key_value_store.rs  mod.rs  serde.rs  types.rs  value.rs
src/eviction_policy/: max_size_eviction_policy.rs  mod.rs
src/hashmap_cache/: max_size_eviction_policy.rs  max_size_hash_map_cache.rs  mod.rs
src/key_value_store/: hash_map_key_value_store.rs  mod.rs
tests/: max_size_hash_map_cache_test.rs
