[package]
name = "hoard"
version = "0.1.0"
authors = ["uday <udaygkale@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.118"
avro-rs = "0.12.0"
schema_registry_converter = { version = "2.0.1", features = ["avro"] }
async-trait = "0.1.42" # This is currently required to properly initialize the world in cucumber-rust
futures = "0.3.8" # You can use a different executor if you wish
#
#[[test]]
#name = "cucumber"
#harness = false # Allows Cucumber to print output instead of libtest
#
#[dev-dependencies]
#cucumber = { package = "cucumber_rust", version = "^0.7.0" }